Add stable code signing to       persist accessibility permissions across       rebuilds
      Replaces ad-hoc signing (CODE_SIGN_IDENTITY:
      "-") with Apple Development
      signing so macOS TCC recognizes the app as the
      same binary after rebuilds.
      Uses a gitignored .env file for per-developer
      DEVELOPMENT_TEAM config.

--- a/project.yml
+++ b/project.yml
@@ -17,7 +17,9 @@ targets:
       base:
         INFOPLIST_FILE: Tabbed/Info.plist
         CODE_SIGN_ENTITLEMENTS: Tabbed/Tabbed.entitlements
-        CODE_SIGN_IDENTITY: "-"
+        CODE_SIGN_IDENTITY: "Apple Development"
+        CODE_SIGN_STYLE: "Automatic"
+        ENABLE_HARDENED_RUNTIME: YES
         PRODUCT_BUNDLE_IDENTIFIER: com.tabbed.Tabbed
     entitlements:
       path: Tabbed/Tabbed.entitlements
